# ShadyBot

./: Cargo.toml  README.md
src/: main.rs
src/commands/: homies.rs  meta.rs  mod.rs  owner.rs
