[package]
name = "translate"
version = "0.1.0"
authors = ["David"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.9.0-rc.2"
env_logger = "0.6"
kankyo = "0.2"
log = "0.4"
toml = "0.5"
serde = "1.0"
tokio = { version = "0.2", features = ["macros"] }
#google-translate2 = "1.0.14+20170525"