[package]
name = "shadybot"
version = "0.1.0"
authors = ["David"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6"
kankyo = "0.2"
log = "0.4"
toml = "0.5"
serde = "1.0"
serenity = "0.11.5"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]
